Fixed wrapping currency symbol

--- a/packages/reaction-core-theme/theme/dashboard/orders/orders.less
+++ b/packages/reaction-core-theme/theme/dashboard/orders/orders.less
@@ -60,6 +60,10 @@
   height: 100%;
 }
 
+.order-detail-item .cart-totals {
+  white-space: nowrap;
+}
+
 .order-panel-items {
   flex: 1 1 auto;
 }
